--- a/ansible/install_applications/vars/stream-airsonic.yml
+++ b/ansible/install_applications/vars/stream-airsonic.yml
@@ -12,6 +12,13 @@ airsonic:
   namespace: "stream-airsonic"
   base_image: "{{ _airsonic_var_loader.base_image }}"
 
+  labels_def:
+    app.kubernetes.io/name: airsonic
+    app.kubernetes.io/component: airsonic
+
+  labels_desc:
+    app.kubernetes.io/version: "{{ _airsonic_var_loader.base_image.tag }}"
+
   container:
     image: "{{ docker_registry.url }}/{{ _airsonic_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _airsonic_var_loader.base_image.tag }}"
     requests_cpu: "{{ airsonic_container_requests_cpu | default('250m') }}"
@@ -21,14 +28,14 @@ airsonic:
 
   context_path: "{{ airsonic_context_path | default('/airsonic') }}"
   extra_java_opts: "{{ airsonic_extra_java_opts | default(airsonic_extra_java_opts_default) }}"
-  
+
   ldap:
     servername: "{{ airsonic_ldap_servername | default(openldap.ldap.servername) }}"
     users_dn: "{{ airsonic_ldap_users_dn | default(openldap.ldap.structure_users_ou_dn) }}"
     manager_dn: "{{ airsonic_ldap_manager_dn | default(openldap.ldap.readonly_user_dn) }}"
     manager_password: "{{ airsonic_ldap_manager_password | default(openldap.ldap.readonly_user_password) }}"
     group: "{{ airsonic_ldap_group }}"
-  
+
   smtp:
     host: "{{ airsonic_smtp_host | default(zonemta.smtp_servername) }}"
     port: "{{ airsonic_smtp_port | default(587) }}"
