--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/handlers/main.yml
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/handlers/main.yml
@@ -1,32 +1,37 @@
 ---
 
 - name: Wait for EasticSearch to be available
-  uri:
-    url: "https://127.0.0.1:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_path }}/_cluster/state"
-    method: GET
-    headers:
-      Host: "infra.{{ web_base_domain }}"
-    return_content: yes
-    validate_certs: no
-    status_code:
-      - 200
-      - 403
-      - 503
-    user: "{{ elasticsearch.exporter.user }}"
-    password: "{{ elasticsearch.exporter.password }}"
-  register: elasticsearch_available
-  until:
-  - (elasticsearch_available.status == 200) or (elasticsearch_available.status == 403) or (elasticsearch_available.status == 503 and "Open Distro Security not initialized" in elasticsearch_available.content)
-  retries: 18
-  delay: 10
+  k8s_facts:
+    kind: StatefulSet
+    namespace: "{{ elasticsearch.namespace }}"
+    name: elasticsearch
+  register: k8s_result
+  become: yes
+  become_user: "{{ kubernetes_user.name }}"
+  until: k8s_result.resources[0].status.readyReplicas | default(0) > 0
+  retries: 60
+  delay: 3
   listen: "Reconfigure Elasticsearch security"
 
-# When the container starts, ElasticSearch seems to be available, but is still initializing.
-# TODO : find a better way to detect that ElasticSearch is available
-- name: Wait for ElasticSearch to be really available
-  wait_for:
-    timeout: 10
-  when: elasticsearch_available.attempts > 0
+# On first start, EasticSearch restarts to run its setup process
+# So if the first wait task has waited, we make sure it's really still up a few seconds later
+- name:
+  pause:
+    seconds: 10
+  when: k8s_result.attempts > 1
+  listen: "Reconfigure Elasticsearch security"
+
+- name: Wait for EasticSearch to be available
+  k8s_facts:
+    kind: StatefulSet
+    namespace: "{{ elasticsearch.namespace }}"
+    name: elasticsearch
+  register: k8s_result
+  become: yes
+  become_user: "{{ kubernetes_user.name }}"
+  until: k8s_result.resources[0].status.readyReplicas | default(0) > 0
+  retries: 60
+  delay: 3
   listen: "Reconfigure Elasticsearch security"
 
 # Security configuration changes are only taken into account the first time ES is deployed, or after running securityadmin.sh
