--- a/ansible/install_applications/roles/logging-fluentd.deploy/app/config/includes/output_00_ignore_self_logs.conf
+++ b/ansible/install_applications/roles/logging-fluentd.deploy/app/config/includes/output_00_ignore_self_logs.conf
@@ -1,3 +1,5 @@
-<match {kube.var.log.containers.fluentd*.**,fluent.warn}>
-  @type null
-</match>
+<label @FLUENT_LOG>
+  <match **>
+    @type null
+  </match>
+</label>
