--- a/ansible/install_applications/roles/web-heimdall.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/web-heimdall.deploy/tasks/main.yml
@@ -35,6 +35,18 @@
   retries: 18
   delay: 10
 
+#- name: Wait for Heimdall to be available
+#  k8s_facts:
+#    kind: StatefulSet
+#    namespace: "{{ heimdall.namespace }}"
+#    name: heimdall
+#  register: k8s_result
+#  become: yes
+#  become_user: "{{ kubernetes_user.name }}"
+#  until: k8s_result.resources[0].status.readyReplicas | default(0) > 0
+#  retries: 18
+#  delay: 10
+
 - name: Inject applications in Heimdall
   command: kubectl --namespace={{ heimdall.namespace }} exec -it heimdall-0 -- php /config/applicationsLoader.php
   register: heimdall_applications_loader
