Implement manifest best practices for home-mosquitto

--- a/ansible/install_applications/vars/home-mosquitto.yml
+++ b/ansible/install_applications/vars/home-mosquitto.yml
@@ -30,3 +30,4 @@ mosquitto:
 
   listeners: "{{ mosquitto_listeners | default([]) }}"
   credentials: "{{ mosquitto_credentials | default([]) }}"
+  healthcheck_credential: "{{ mosquitto_healthcheck_credential | default({}) }}"
