Implement manifest best practices for home-roomassistant

--- a/ansible/install_applications/roles/home-roomassistant.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/home-roomassistant.deploy/tasks/main.yml
@@ -10,6 +10,7 @@
   vars:
     base_image: "{{ roomassistant.base_image }}"
     private_image: "{{ roomassistant.container.image }}"
+    build: yes
 
 - name: Deploy Room Assistant
   k8s:
