--- a/ansible/install_applications/vars/home-roomassistant.yml
+++ b/ansible/install_applications/vars/home-roomassistant.yml
@@ -20,7 +20,7 @@ roomassistant:
     app.kubernetes.io/version: "{{ _roomassistant_var_loader.base_image.tag }}"
 
   container:
-    image: "{{ docker_registry.url }}/{{ _roomassistant_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _roomassistant_var_loader.base_image.tag }}"
+    image: "{{ docker_registry.url }}/{{ _roomassistant_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _roomassistant_var_loader.base_image.tag }}-custom"
     requests_cpu: "{{ roomassistant_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ roomassistant_container_requests_memory | default('256Mi') }}"
     limits_cpu: "{{ roomassistant_container_limits_cpu | default('250m') }}"
