--- a/ansible/install_applications/roles/web-ttrss.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/web-ttrss.deploy/tasks/main.yml
@@ -11,6 +11,8 @@
     base_image: "{{ ttrss.base_image }}"
     private_image: "{{ ttrss.container.image }}"
     build: yes
+    build_args:
+      ttrss_commit: "{{ ttrss.commit }}"
 
 - name: Ensure TT-RSS PGSQL image is up-to-date in the private registry
   import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
