--- a/ansible/install_applications/vars/web-ttrss.yml
+++ b/ansible/install_applications/vars/web-ttrss.yml
@@ -16,6 +16,7 @@ ttrss:
   
   labels_def:
     app.kubernetes.io/name: ttrss
+    app.kubernetes.io/component: ttrss
   
   labels_web_def:
     app.kubernetes.io/name: ttrss
