--- a/ansible/install_applications/roles/web-ttrss.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/web-ttrss.deploy/tasks/main.yml
@@ -13,6 +13,8 @@
     build: yes
     build_args:
       ttrss_commit: "{{ ttrss.commit }}"
+      ttrss_plugin_auth_ldap_commit: "{{ ttrss.plugins.auth_ldap.commit }}"
+      ttrss_plugin_mailer_smtp_commit: "{{ ttrss.plugins.mailer_smtp.commit }}"
 
 - name: Ensure TT-RSS PGSQL image is up-to-date in the private registry
   import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
