--- a/ansible/install_applications/roles/web-homer.deploy/meta/main.yml
+++ b/ansible/install_applications/roles/web-homer.deploy/meta/main.yml
@@ -3,7 +3,7 @@
 galaxy_info:
   author: "Neraud"
   license: MIT
-  description: "Deploy application web-heimdall"
+  description: "Deploy application web-homer"
   min_ansible_version: 2.7
   platforms:
   - name: Debian
