--- a/ansible/install_applications/vars/web-ttrss.yml
+++ b/ansible/install_applications/vars/web-ttrss.yml
@@ -6,6 +6,7 @@ _ttrss_var_loader:
     name: "php"
     tag: "7.4.1-apache-buster"
   commit: 040dfc71fc
+  full_commit: 040dfc71fc969fa4a8e8cc9b9cadf5d3b231990b
   
 ttrss:
   enabled: "{{ ttrss_enabled | default(True) }}"
@@ -91,5 +92,5 @@ ttrss_pgsql:
   user: "{{ ttrss_pgsql_user | default('ttrss') }}"
   database: "{{ ttrss_pgsql_database | default('ttrss') }}"
   password: "{{ ttrss_pgsql_password | default('clear_password') }}"
-  schema_url: "https://git.tt-rss.org/fox/tt-rss/raw/{{ _ttrss_var_loader.commit }}/schema/ttrss_schema_pgsql.sql"
+  schema_url: "https://git.tt-rss.org/fox/tt-rss/raw/{{ _ttrss_var_loader.full_commit }}/schema/ttrss_schema_pgsql.sql"
   schema_path_temp: /tmp/tt-rss-schema.sql
