--- a/ansible/install_applications/vars/download-sickchill.yml
+++ b/ansible/install_applications/vars/download-sickchill.yml
@@ -3,8 +3,9 @@
 # To avoid loops inside sickchill
 _sickchill_var_loader:
   base_image:
-    name: "linuxserver/sickchill"
-    tag: "amd64-e0947596-ls19"
+    name: "python"
+    tag: "2.7.17-alpine3.11"
+  version: "v2020.02.27-2"
   namespace: "download-sickchill"
 
 sickchill:
@@ -12,6 +13,7 @@ sickchill:
 
   namespace: "{{ _sickchill_var_loader.namespace }}"
   base_image: "{{ _sickchill_var_loader.base_image }}"
+  version: "{{ _sickchill_var_loader.version }}"
   servername: "sickchill.{{ _sickchill_var_loader.namespace }}.svc.cluster.local"
   
   labels_def:
@@ -22,7 +24,7 @@ sickchill:
     app.kubernetes.io/version: "{{ _sickchill_var_loader.base_image.tag }}"
 
   container:
-    image: "{{ docker_registry.url }}/{{ _sickchill_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _sickchill_var_loader.base_image.tag }}"
+    image: "{{ docker_registry.url }}/sickchill:{{ _sickchill_var_loader.version }}_{{ _sickchill_var_loader.base_image.name }}{{ _sickchill_var_loader.base_image.tag }}"
     requests_cpu: "{{ sickchill_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ sickchill_container_requests_memory | default('256Mi') }}"
     limits_cpu: "{{ sickchill_container_limits_cpu | default('200m') }}"
