--- a/ansible/install_applications/roles/download-sabnzbd.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/tasks/main.yml
@@ -12,6 +12,10 @@
     base_image: "{{ sabnzbd.base_image }}"
     private_image: "{{ sabnzbd.container.image }}"
     build: yes
+    build_args:
+      sabnzbd_version: "{{ sabnzbd.version }}"
+      par2cmdline_version: "{{ sabnzbd.par2cmdline_version }}"
+      nzbToMedia_version: "{{ sabnzbd.nzbToMedia_version }}"
 
 - name: Deploy sabnzbd
   k8s:
