Add watchers for sabnzbd

--- a/ansible/install_applications/vars/download-sabnzbd.yml
+++ b/ansible/install_applications/vars/download-sabnzbd.yml
@@ -5,7 +5,9 @@ _sabnzbd_var_loader:
   base_image:
     name: "python"
     tag: "2.7.17-alpine3.11"
-  version: 2.3.9
+  repo:
+    name: sabnzbd/sabnzbd
+    version: 2.3.9
   namespace: "download-sabnzbd"
 
 sabnzbd:
@@ -13,7 +15,7 @@ sabnzbd:
 
   namespace: "{{ _sabnzbd_var_loader.namespace }}"
   base_image: "{{ _sabnzbd_var_loader.base_image }}"
-  version: "{{ _sabnzbd_var_loader.version }}"
+  repo: "{{ _sabnzbd_var_loader.repo }}"
   servername: "sabnzbd.{{ _sabnzbd_var_loader.namespace }}.svc.cluster.local"
   
   labels_def:
@@ -23,11 +25,17 @@ sabnzbd:
   labels_desc:
     app.kubernetes.io/version: "{{ _sabnzbd_var_loader.base_image.tag }}"
   
-  par2cmdline_version: v0.8.1
-  nzbToMedia_version: 12.1.04
+  par2cmdline:
+    repo:
+      name: Parchive/par2cmdline
+      version: v0.8.1
+  nzbToMedia:
+    repo:
+      name: clinton-hall/nzbToMedia
+      version: 12.1.04
 
   container:
-    image: "{{ docker_registry.url }}/sabnzbd:{{ _sabnzbd_var_loader.version }}_{{ _sabnzbd_var_loader.base_image.name }}{{ _sabnzbd_var_loader.base_image.tag }}"
+    image: "{{ docker_registry.url }}/sabnzbd:{{ _sabnzbd_var_loader.repo.version }}_{{ _sabnzbd_var_loader.base_image.name }}{{ _sabnzbd_var_loader.base_image.tag }}"
     requests_cpu: "{{ sabnzbd_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ sabnzbd_container_requests_memory | default('256Mi') }}"
     limits_cpu: "{{ sabnzbd_container_limits_cpu | default('200m') }}"
