--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/config/dashboards/ingress-nginx.json
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/config/dashboards/ingress-nginx.json
@@ -372,9 +372,9 @@
       "tableColumn": "",
       "targets": [
         {
-          "expr": "avg(nginx_ingress_controller_success{controller_pod=~\"$controller\",controller_class=~\"$controller_class\",controller_namespace=~\"$namespace\"})",
+          "expr": "avg(irate(nginx_ingress_controller_success{controller_pod=~\"$controller\",controller_class=~\"$controller_class\",controller_namespace=~\"$namespace\"}[1m])) * 60",
           "format": "time_series",
-          "instant": true,
+          "instant": false,
           "intervalFactor": 1,
           "refId": "A",
           "step": 4
@@ -392,7 +392,7 @@
           "value": "null"
         }
       ],
-      "valueName": "avg"
+      "valueName": "total"
     },
     {
       "cacheTimeout": null,
@@ -1324,12 +1324,8 @@
   "templating": {
     "list": [
       {
-        "current": {
-          "text": "Prometheus",
-          "value": "Prometheus"
-        },
         "hide": 0,
-        "label": "Datasource",
+        "label": "datasource",
         "name": "DS_PROMETHEUS",
         "options": [],
         "query": "prometheus",
