Update ansible k8s_facts to k8s_info

--- a/ansible/install_applications/roles/infra-docker-registry.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/tasks/main.yml
@@ -24,7 +24,7 @@
   become_user: "{{ kubernetes_user.name }}"
 
 - name: Wait for Docker registry to be available
-  k8s_facts:
+  k8s_info:
     kind: StatefulSet
     namespace: "{{ docker_registry.namespace }}"
     name: docker-registry
