--- a/ansible/install_applications/roles/auth-openldap.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/auth-openldap.deploy/tasks/main.yml
@@ -43,7 +43,7 @@
   become_user: "{{ kubernetes_user.name }}"
 
 - name: Fetch OpenLDAP internal endpoint
-  k8s_facts:
+  k8s_info:
     api_version: v1
     kind: Service
     name: openldap
@@ -57,7 +57,7 @@
     openldap_internal_uri: "ldap://{{ openldap_service.resources[0].spec.clusterIP }}"
 
 - name: Wait for OpenLDAP to be available
-  k8s_facts:
+  k8s_info:
     kind: StatefulSet
     namespace: "{{ openldap.namespace }}"
     name: openldap
@@ -76,7 +76,7 @@
   when: k8s_result.attempts > 1
 
 - name: Wait for OpenLDAP to be available
-  k8s_facts:
+  k8s_info:
     kind: StatefulSet
     namespace: "{{ openldap.namespace }}"
     name: openldap
