--- a/ansible/install_applications/roles/infra-gotify.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/infra-gotify.deploy/tasks/main.yml
@@ -21,7 +21,7 @@
   become_user: "{{ kubernetes_user.name }}"
 
 - name: Wait for Gotify to be available
-  k8s_facts:
+  k8s_info:
     kind: StatefulSet
     namespace: "{{ gotify.namespace }}"
     name: gotify
